frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: pnt-quiz
  labels:
    app: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
      tier: frontend
  template:
    metadata:
      labels:
        app: frontend-app
        tier: frontend
    spec:
      containers:
        - name: frontend-app
          image: jasonloderick/docker_multi-stage_build:latest
          imagePullPolicy: Always
