backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app
  namespace: pnt-quiz
  labels:
    app: backend-app
spec:
  selector:
    app: backend-app
    tier: backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
