frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
  namespace: pnt-quiz
  labels:
    app: frontend-app
spec:
  selector:
    app: frontend-app
    tier: frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8181
